# kompare

./: CMakeLists.txt
komparenavtreepart/: CMakeLists.txt
komparepart/: CMakeLists.txt  komparelistview.cpp
libdialogpages/: CMakeLists.txt
libdiff2/: CMakeLists.txt  diffsettings.cpp  komparemodellist.cpp  kompareprocess.cpp  parserbase.cpp  settingsbase.cpp
libdiff2/tests/: interactivedifftest.cpp
